# Gitly

./: .env.example  .gitignore  404.html  MIGRATION.md  Makefile  OVERVIEW.md  README.md  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  docs.yml
.gitly/provenance/: .bound  2026-07-06.jsonl
.gitly/provenance/records/: 2026-07-06.jsonl
alembic/: env.py
alembic/versions/: 0001_initial.py
architecture/: index.html
backend/app/: celery_app.py  cli.py  config.py  main.py
backend/app/api/routes/: copilot.py  health.py  lens.py  shrink.py  trace.py
backend/app/db/: models.py  session.py
backend/app/engines/copilot/: brain.py  ops.py
backend/app/engines/lens/: engine.py  models.py
backend/app/engines/lens/clustering/: __init__.py  _edit.py  fingerprint.py  naming.py  outlier.py  stub.py  template.py
backend/app/engines/lens/diff/: __init__.py  language.py  parser.py
backend/app/engines/shrink/: service.py  ship.py  validate.py
backend/app/engines/shrink/diff/: __init__.py  completeness.py  gitio.py  materialize.py  models.py  parse.py
backend/app/engines/shrink/graph/: __init__.py  analyzer.py  depgraph.py
backend/app/engines/shrink/planner/: __init__.py  classify.py  labeler.py  planner.py
backend/app/engines/trace/: binder.py  blame.py  recorder.py  sync.py
backend/app/security/: secret_firewall.py
backend/tests/: test_brain.py  test_capture_hook.py  test_cli.py  test_copilot_ops.py  test_diff_parsers_agree.py  test_lens_engine.py  test_redaction_parity.py  test_secret_firewall.py  test_shrink_engine.py  test_shrink_ship.py  test_shrink_validate.py  test_trace_api_guard.py  test_trace_bind.py  test_trace_reliability.py  test_trace_smoke.py
commands/: absorb.md  commit.md  lens.md  scan.md  shrink.md  trace.md
contributing/: index.html
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: architecture.md  contributing.md  index.md  security.md
docs/getting-started/: installation.md  quickstart.md
docs/integrations/: hooks.md  mcp.md
docs/pillars/: copilot.md  lens.md  shrink.md  trace.md
docs/reference/: api.md  cli.md  configuration.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/copilot/: page.tsx
frontend/app/lens/: page.tsx
frontend/app/shrink/: page.tsx
frontend/app/trace/: page.tsx
frontend/components/: AuthorshipBar.tsx  BlameView.tsx  FileTree.tsx  LensClient.tsx  Nav.tsx  ProvenanceTable.tsx  SecretScanDemo.tsx  ShrinkClient.tsx  TraceExplorer.tsx
frontend/lib/: api.ts  clientApi.ts  db.ts
getting-started/installation/: index.html
getting-started/quickstart/: index.html
hooks/: hooks.json
integrations/hooks/: index.html
integrations/mcp/: index.html
pillars/copilot/: index.html
pillars/lens/: index.html
pillars/shrink/: index.html
pillars/trace/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/configuration/: index.html
scripts/: seed_demo.py
sdk/hooks/: claude_post_tool.py  pre-commit
sdk/mcp/: README.md  package-lock.json  package.json  test_smoke.mjs
sdk/mcp/src/: index.ts  lib.ts
sdk/mcp/test/: redaction.test.mjs
sdk/python/: pyproject.toml
sdk/python/gitly_sdk/: provenance.py
search/: search_index.json
security/: index.html
shared/: redaction_fixtures.json
shared/diff_core/: parser.py
shared/schema/: common.py  provenance.py
workers/: celery.py
workers/tasks/: shrink.py  trace.py
