[project]
name = "gitly"
version = "0.0.1"
description = "Git-quality tooling for the AI-authorship era: commit right, shrink megaPRs, read diffs, and trace who really wrote the code."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "celery>=5.4",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "unidiff>=0.7.5",
  "networkx>=3.3",
  "httpx>=0.27",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34"]          # optional, opt-in intent labels / commit messages
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
gitly = "backend.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# flat monorepo packages, importable from the repo root
packages = ["shared", "backend", "workers"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
