[project]
name = "gitly"
version = "0.0.1"
description = "Git-quality tooling for the AI-authorship era: commit right, shrink megaPRs, read diffs, and trace who really wrote the code."
requires-python = ">=3.12"
# Lean core — all the `gitly` CLI needs (commit, absorb, scan, trace, shrink).
# Upper bounds on majors: a future breaking release must fail install, not runtime.
dependencies = [
  "typer>=0.12,<1",
  "pydantic>=2.7,<3",
  "unidiff>=0.7.5,<1",
  "networkx>=3.3,<4",
]

[project.optional-dependencies]
# The API + worker stack (NOT needed for the CLI). `pip install gitly[server]`.
server = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "celery>=5.4,<6",
  "redis>=5.0,<7",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.3,<3",
  "httpx>=0.27,<1",
]
llm = ["anthropic>=0.34,<2"]       # optional, opt-in intent labels / commit messages
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]
docs = ["mkdocs-material>=9.5,<10"]    # the documentation site (mkdocs.yml + docs/)

[project.scripts]
gitly = "backend.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# flat monorepo packages, importable from the repo root
packages = ["shared", "backend", "workers"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
