[project]
name = "gitly-sdk"
version = "0.0.1"
description = "Record AI authorship provenance from coding agents and git hooks (feeds `gitly trace`)."
requires-python = ">=3.9"
dependencies = []          # intentionally dependency-free so any agent/hook/CI step can vendor it

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitly_sdk"]
